Se implementan nuevos test en el backend #21