@@ -1,13 +1,13 @@
 package com.nomorelaps.business;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,60 +27,53 @@ class SanctionServiceTest {
     @InjectMocks
     private SanctionService sanctionService;
 
-    private Sanction testSanction;
-
-    @BeforeEach
-    void setUp() {
-        testSanction = new Sanction(1L);
-        testSanction.setAmount(50.0);
-        testSanction.setPaid(false);
-    }
-
     @Test
-    @DisplayName("Should create sanction")
+    @DisplayName("create - Should delegate to persistence")
     void shouldCreateSanction() {
-        when(persistencePort.save(any(Sanction.class))).thenReturn(testSanction);
-        Sanction created = sanctionService.create(testSanction);
-        assertNotNull(created);
-        verify(persistencePort).save(testSanction);
+        Sanction s = new Sanction();
+        when(persistencePort.save(s)).thenReturn(s);
+        Sanction result = sanctionService.create(s);
+        assertEquals(s, result);
+        verify(persistencePort).save(s);
     }
 
     @Test
-    @DisplayName("Should find sanction by id")
+    @DisplayName("findById - Should return optional sanction")
     void shouldFindById() {
-        when(persistencePort.findById(1L)).thenReturn(Optional.of(testSanction));
-        Optional<Sanction> found = sanctionService.findById(1L);
-        assertTrue(found.isPresent());
-        assertEquals(testSanction, found.get());
+        Sanction s = new Sanction();
+        when(persistencePort.findById(1L)).thenReturn(Optional.of(s));
+        Optional<Sanction> result = sanctionService.findById(1L);
+        assertTrue(result.isPresent());
+        verify(persistencePort).findById(1L);
     }
 
     @Test
-    @DisplayName("Should find sanctions by user id")
+    @DisplayName("findByUserId - Should return list")
     void shouldFindByUserId() {
-        when(persistencePort.findByUserId(1L)).thenReturn(List.of(testSanction));
-        List<Sanction> found = sanctionService.findByUserId(1L);
-        assertEquals(1, found.size());
+        when(persistencePort.findByUserId(1L)).thenReturn(Arrays.asList(new Sanction()));
+        List<Sanction> result = sanctionService.findByUserId(1L);
+        assertEquals(1, result.size());
     }
 
     @Test
-    @DisplayName("Should find sanctions by reservation id")
+    @DisplayName("findByReservationId - Should return list")
     void shouldFindByReservationId() {
-        when(persistencePort.findByReservationId(1L)).thenReturn(List.of(testSanction));
-        List<Sanction> found = sanctionService.findByReservationId(1L);
-        assertEquals(1, found.size());
+        when(persistencePort.findByReservationId(1L)).thenReturn(Arrays.asList(new Sanction()));
+        List<Sanction> result = sanctionService.findByReservationId(1L);
+        assertEquals(1, result.size());
     }
 
     @Test
-    @DisplayName("Should update sanction")
+    @DisplayName("update - Should delegate to persistence")
     void shouldUpdateSanction() {
-        when(persistencePort.save(any(Sanction.class))).thenReturn(testSanction);
-        Sanction updated = sanctionService.update(testSanction);
-        assertNotNull(updated);
-        verify(persistencePort).save(testSanction);
+        Sanction s = new Sanction();
+        when(persistencePort.save(s)).thenReturn(s);
+        Sanction result = sanctionService.update(s);
+        assertEquals(s, result);
     }
 
     @Test
-    @DisplayName("Should delete sanction by id")
+    @DisplayName("deleteById - Should call persistence")
     void shouldDeleteById() {
         doNothing().when(persistencePort).deleteById(1L);
         sanctionService.deleteById(1L);
@@ -88,19 +81,38 @@ class SanctionServiceTest {
     }
 
     @Test
-    @DisplayName("Should mark sanction as paid")
-    void shouldPaySanction() {
-        when(persistencePort.findById(1L)).thenReturn(Optional.of(testSanction));
-        when(persistencePort.save(any(Sanction.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        Sanction paid = sanctionService.paySanction(1L);
-        assertTrue(paid.isPaid());
-        verify(persistencePort).save(testSanction);
+    @DisplayName("findByCompanyId - Should return list of sanctions")
+    void shouldFindByCompanyId() {
+        Sanction s1 = new Sanction();
+        Sanction s2 = new Sanction();
+        when(persistencePort.findByCompanyId(1L)).thenReturn(Arrays.asList(s1, s2));
+
+        List<Sanction> result = sanctionService.findByCompanyId(1L);
+
+        assertEquals(2, result.size());
+        verify(persistencePort).findByCompanyId(1L);
     }
 
     @Test
-    @DisplayName("Should throw exception when paying non-existent sanction")
-    void shouldThrowExceptionWhenNotFound() {
-        when(persistencePort.findById(anyLong())).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> sanctionService.paySanction(999L));
+    @DisplayName("paySanction - Should set paid to true and save")
+    void shouldPaySanction() {
+        Sanction s = new Sanction();
+        s.setId(1L);
+        s.setPaid(false);
+
+        when(persistencePort.findById(1L)).thenReturn(Optional.of(s));
+        when(persistencePort.save(any(Sanction.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        Sanction result = sanctionService.paySanction(1L);
+
+        assertTrue(result.isPaid());
+        verify(persistencePort).save(s);
+    }
+
+    @Test
+    @DisplayName("paySanction - Should throw when not found")
+    void shouldThrowWhenSanctionNotFound() {
+        when(persistencePort.findById(99L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> sanctionService.paySanction(99L));
     }
 }
